# engine

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: camera.cpp  camera.h  config.h  glad.c  main.cpp  shader.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  texture.h
src/shaders/: fragment.txt  vertex.txt
